--- a/index.html
+++ b/index.html
@@ -1,37 +1,12 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+---
+layout: default
+title: 首页
+---
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+<!-- 　　　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li> -->
 
-    <title>1901.github.io by 1901</title>
-  </head>
-
-  <body>
-
-    <header>
-      <div class="container">
-        <h1>1901.github.io</h1>
-        <h2>1901.github.io</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/1901" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
-      </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h1>1901.github.io</h1>
-
-<p>1901.github.io</p>
-      </section>
-    </div>
-
-    
-  </body>
-</html>
+<ul>
+	{% for post in site.posts %}
+		<li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
+	{% endfor %}
+</ul>
